--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,15 +3,23 @@
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="toolbar_title">Toolbar Title</string>
-    <string name="back">Back</string>
+
+    <!--Main Activity-->
     <string name="workout">Workout</string>
     <string name="profile">Profile</string>
     <string name="settings">Settings</string>
+
+    <!--Workout Details Fragment-->
+    <string name="back">Back</string>
     <string name="cardio">Cardio</string>
     <string name="strength">Strength</string>
     <string name="mobility">Mobility</string>
     <string name="total_exercise">Total exercise</string>
     <string name="total_time">Total time</string>
-    <string name="add_exercise">Add Exercise</string>
     <string name="add_workout">Add Workout</string>
+
+    <!--Add Exercise Fragment-->
+
+    <string name="add_exercise">Add Exercise</string>
+    <string name="exercise_name">Exercise name</string>
 </resources>
