--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,7 @@
     <string name="total_time">Total time</string>
     <string name="add_workout">Add Workout</string>
     <string name="click_iv_to_choose">(click on icon to choose another)</string>
+    <string name="workout_details">Workout Details</string>
 
     <!--Add Exercise Fragment-->
 
