--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,7 +46,17 @@
     <string name="login">Login</string>
     <string name="register">Register</string>
     <string name="logout">Logout</string>
-    <string name="enter_email">Enter your email</string>
-    <string name="enter_password">Enter your password</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
     <string name="forgot_password">Forgot your password?</string>
+    <string name="create_new_account">Create new account</string>
+    <string name="member_login">Member Login</string>
+    <string name="enter_email">Enter email</string>
+    <string name="enter_password">Enter password</string>
+    <string name="not_email">Not an email</string>
+    <string name="short_password">Password too short, enter minimum 6 characters</string>
+    <string name="enter_email_password">Enter your email &amp; password</string>
+    <string name="email_exist">Email already exists</string>
+    <string name="weak_password">Password too weak</string>
+    <string name="register_successfully">Registered successfully</string>
 </resources>
