--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="rests_duration">Rest\'s duration</string>
     <string name="themes">Themes</string>
     <string name="done">Done</string>
+    <string name="change_password">Change password</string>
 
     <!--Workout Details Fragment-->
     <string name="back">Back</string>
@@ -37,6 +38,7 @@
     <string name="negative_btn">Cancel</string>
     <string name="confirm_save">Are you sure you want to save?</string>
     <string name="confirm_delete">Are you sure you want to delete this workout?</string>
+    <string name="enter_workout_title">Enter your workout\'s title</string>
 
     <!--Add Exercise Fragment-->
     <string name="add_exercise">Add Exercise</string>
@@ -74,4 +76,7 @@
     <string name="email_not_exist">Email does not exist</string>
     <string name="wrong_password">Wrong password</string>
     <string name="reset_password">Reset my password</string>
+    <string name="send_reset_password">\nWe will send password reset instructions to this email?</string>
+    <string name="send_reset_password_success">We have sent you instructions to reset your password</string>
+    <string name="send_reset_password_failed">Failed to send reset email</string>
 </resources>
