--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,4 +85,5 @@
 
     <!--StartWorkoutFragment-->
     <string name="demo_time">00:00</string>
+    <string name="ready">Ready</string>
 </resources>
