--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,4 +86,5 @@
     <!--StartWorkoutFragment-->
     <string name="demo_time">00:00</string>
     <string name="ready">Ready</string>
+    <string name="next">Next:</string>
 </resources>
