--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,4 +87,5 @@
     <string name="demo_time">00:00</string>
     <string name="ready">Ready</string>
     <string name="next">Next:</string>
+    <string name="start_workout">Start Workout</string>
 </resources>
