--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,8 @@
     <string name="workout_exercises">Workout&#39;s Exercise</string>
 
     <!--History Fragment-->
+    <string name="workout_times">Workout times:</string>
+    <string name="total_calories_burned">Total calories burned:</string>
 
     <!--Settings Fragment-->
     <string name="sound">Sounds</string>
