--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,11 @@
     <string name="themes">Themes</string>
     <string name="done">Done</string>
     <string name="change_password">Change password</string>
+    <string name="update_height_weight">Update height/weight</string>
+    <string name="old_password">Old password</string>
+    <string name="new_password">New password</string>
+    <string name="enter_your_old_pass">Enter your old password</string>
+    <string name="endter_your_new_pass">Enter your new password</string>
 
     <!--Workout Details Fragment-->
     <string name="back">Back</string>
@@ -68,8 +73,8 @@
     <string name="name">Name</string>
     <string name="age">Age</string>
     <string name="gender">Gender</string>
-    <string name="height">Height</string>
-    <string name="weight">Weight</string>
+    <string name="height">Height(cm)</string>
+    <string name="weight">Weight(kg)</string>
     <string name="male">Male</string>
     <string name="female">Female</string>
     <string name="enter_name">Enter your name</string>
