--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -111,4 +111,5 @@
     <string name="invalid_age">Invalid age</string>
     <string name="invalid_height">Invalid height</string>
     <string name="invalid_weight">Invalid weight</string>
+    <string name="no_connection">No connection</string>
 </resources>
