--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,24 +3,16 @@
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="toolbar_title">Toolbar Title</string>
-
-    <!--Main Activity-->
     <string name="workout">Workout</string>
     <string name="history">History</string>
     <string name="settings">Settings</string>
-
-    <!--Workout Fragment-->
     <string name="workout_title">Workout Title</string>
     <string name="workout_duration">Workout Duration</string>
     <string name="workout_exercises">Workout&#39;s Exercise</string>
     <string name="quick_starters">Quick Start</string>
     <string name="custom_made">Custom Made</string>
-
-    <!--History Fragment-->
     <string name="workout_times">Workout times:</string>
     <string name="total_calories_burned">Total calories burned:</string>
-
-    <!--Settings Fragment-->
     <string name="sound">Sounds</string>
     <string name="exercises_duration">Exercise\'s duration</string>
     <string name="rests_duration">Rest\'s duration</string>
@@ -36,8 +28,6 @@
     <string name="update_password_failed">Failed to update password</string>
     <string name="update_info_failed">Failed to update info. Please check your connection</string>
     <string name="click_chart_item">(Click item to show details)</string>
-
-    <!--Workout Details Fragment-->
     <string name="back">Back</string>
     <string name="cardioRate">Cardio</string>
     <string name="strength">Strength</string>
@@ -52,12 +42,8 @@
     <string name="confirm_save">Are you sure you want to save?</string>
     <string name="confirm_delete">Are you sure you want to delete this workout?</string>
     <string name="enter_workout_title">Enter your workout\'s title</string>
-
-    <!--Add Exercise Fragment-->
     <string name="add_exercise">Add Exercise</string>
     <string name="exercise_name">Exercise name</string>
-
-    <!--Login Activity-->
     <string name="login">Login</string>
     <string name="register">Register</string>
     <string name="logout">Logout</string>
@@ -97,8 +83,6 @@
     <string name="send_reset_password_failed">Failed to send reset email</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
-
-    <!--StartWorkoutFragment-->
     <string name="demo_time">00:00</string>
     <string name="ready">Ready</string>
     <string name="next">Next:</string>
@@ -112,4 +96,6 @@
     <string name="invalid_height">Invalid height</string>
     <string name="invalid_weight">Invalid weight</string>
     <string name="no_connection">No connection</string>
+    <string name="reminder">Reminder</string>
+    <string name="time">Time</string>
 </resources>
